--- a/web/resources/css/authpage.css
+++ b/web/resources/css/authpage.css
@@ -48,3 +48,12 @@ body {
 .navbar-right{
     background-color: #9dda97;
 }
+
+.semiopacity {
+    background: #f9eaea;
+    padding: 5px;
+    opacity: 0.6;
+    filter: alpha(Opacity=70);
+    color: #000;
+    border-radius: 4px;
+}
